--- a/main.css
+++ b/main.css
@@ -42,6 +42,8 @@ h1 {
   font-weight: 600;
   color: var(--heading-color);
   text-shadow: 1px 1px 5px #dddddd3f;
+  text-align: center;
+  font-size: 2.4rem;
 }
 
 :root {
@@ -63,4 +65,77 @@ h1 {
   padding: 30px 30px 25px;
   box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.445);
   border: 2px solid #f0545436;
+}
+
+.wrapper .content {
+  margin: 35px 0;
+}
+
+.content .quote-area {
+  display: flex;
+  justify-content: center;
+}
+
+.quote-area .quote {
+  font-size: 1.3rem;
+  text-align: center;
+}
+
+.quote-area i {
+  font-size: 1rem;
+}
+
+.quote-area i:first-child {
+  margin: 3px 10px 0 0;
+}
+
+.quote-area i:last-child {
+  margin: 0 0 3px 10px;
+}
+
+.content .author {
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 20px;
+  font-style: italic;
+  font-family: monospace;
+  font-size: 1.2rem;
+}
+
+.author span:first-child {
+  margin: -7px 5px 0 0;
+  font-family: monospace;
+}
+
+.wrapper .buttons {
+  border-top: 1px solid #ccc;
+}
+
+.buttons .features {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 20px;
+}
+
+.features ul {
+  display: flex;
+}
+
+.features ul li {
+  list-style: none;
+  margin: 0 5px;
+  margin-top: 15px;
+  height: 47px;
+  width: 47px;
+  border: 2px solid var(--heading-color);
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: var(--font-color);
+}
+
+.features ul li:first-child {
+  margin-left: -35px;
 }
