--- a/main.css
+++ b/main.css
@@ -65,6 +65,7 @@ h1 {
   padding: 30px 30px 25px;
   box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.445);
   border: 2px solid #f0545436;
+  padding-bottom: 5px;
 }
 
 .wrapper .content {
@@ -108,14 +109,15 @@ h1 {
 }
 
 .wrapper .buttons {
-  border-top: 1px solid #ccc;
+  border-top: 1px solid #141f294f;
+  margin-top: 15px;
 }
 
 .buttons .features {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin-top: 20px;
+  margin-top: 50px;
 }
 
 .features ul {
@@ -125,7 +127,6 @@ h1 {
 .features ul li {
   list-style: none;
   margin: 0 5px;
-  margin-top: 15px;
   height: 47px;
   width: 47px;
   border: 2px solid var(--heading-color);
@@ -134,8 +135,27 @@ h1 {
   align-items: center;
   justify-content: center;
   color: var(--font-color);
+  cursor: pointer;
+  transition: all 0.3s ease-in;
+}
+
+.features ul li:hover {
+  color: var(--background-color);
+  background: var(--font-color);
 }
 
 .features ul li:first-child {
   margin-left: -35px;
+}
+
+.features button {
+  border: none;
+  outline: none;
+  background: var(--heading-color);
+  color: var(--font-color);
+  font-family: 'Anybody', cursive;
+  padding: 13px 22px;
+  border-radius: 30px;
+  cursor: pointer;
+  font-style: 16px;
 }
