--- a/main.css
+++ b/main.css
@@ -170,3 +170,8 @@ h1 {
   border: 1px solid #fff;
   transition: all 0.3s ease-in-out;
 }
+
+button.loading {
+  opacity: 0.7;
+  pointer-events: none;
+}
